<resources>
    <string name="app_name">Stock Monitoring</string>
    <string name="find">Find company or ticker</string>
    <string name="stocks">Stocks</string>
    <string name="favourite">Favourite</string>
    <string name="placeholder_name" translatable="false">YNDX</string>
    <string name="placeholder_surname" translatable="false">Yandex, LLC</string>
    <string name="placeholder_cost" translatable="false">4 764,6 ₽</string>
    <string name="placeholder_percent" translatable="false">+55 ₽ (1,15%)</string>
    <string name="news">News</string>
    <string name="forecasts">Forecasts</string>
    <string name="summary">Summary</string>
    <string name="chart">Chart</string>
    <string name="company_placeholder" translatable="false">Apple Inc.</string>
    <string name="name_placeholder" translatable="false">AAPL</string>
    <string name="buy_btn">Buy for</string>
    <string name="interval_all">All</string>
    <string name="interval_year">1Y</string>
    <string name="interval_6m">6M</string>
    <string name="interval_month">M</string>
    <string name="interval_w">W</string>
    <string name="inverval_day">D</string>
    <string name="stock_difference" translatable="false">+$0.12 (1,15%)</string>
    <string name="stock_price" translatable="false">$131.93</string>
    <string name="popular_requests">Popular requests</string>
    <string name="you_ve_searched_for_this">You’ve searched for this</string>
    <string name="show_more">Show more</string>
    <string name="results_not_found">Results not found</string>
    <string name="january">jan.</string>
    <string name="february">feb.</string>
    <string name="march">mar.</string>
    <string name="april">apr.</string>
    <string name="may">may</string>
    <string name="june">june</string>
    <string name="july">july</string>
    <string name="august">aug.</string>
    <string name="september">sep.</string>
    <string name="october">oct.</string>
    <string name="november">nov.</string>
    <string name="december">dec.</string>
    <string name="error_loading_data_ncheck_your_connection_or_try_again_later">Error loading data. Check your connection or try again later</string>
    <string name="you_don_t_have_any_favorite_stocks_add_your_first_stock">You don\'t have any favorite stocks. Add your first stock</string>
    <string name="date_placeholder">29 march 2021</string>

</resources>