<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.StockActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="33dp"
        android:src="@drawable/ic_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/favourite_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="18dp"
        android:src="@drawable/ic_not_favourite"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/name_placeholder"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/company_placeholder"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:paddingBottom="14dp"
        app:layout_constraintTop_toBottomOf="@id/company">

        <TextView
            android:id="@+id/chart"
            style="@style/StockButtonActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chart"
            app:layout_constraintBottom_toBottomOf="@id/summary"
            app:layout_constraintEnd_toStartOf="@+id/summary"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/menu" />

        <TextView
            android:id="@+id/summary"
            style="@style/StockButtonNotActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/chart"
            android:text="@string/summary"
            app:layout_constraintBottom_toBottomOf="@id/chart"
            app:layout_constraintEnd_toStartOf="@+id/news"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/chart"
            app:layout_constraintTop_toTopOf="@id/menu" />

        <TextView
            android:id="@+id/news"
            style="@style/StockButtonNotActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/chart"
            android:text="@string/news"
            app:layout_constraintBottom_toBottomOf="@id/summary"
            app:layout_constraintEnd_toStartOf="@+id/forecasts"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/summary"
            app:layout_constraintTop_toTopOf="@id/menu" />

        <TextView
            android:id="@+id/forecasts"
            style="@style/StockButtonNotActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/chart"
            android:text="@string/forecasts"
            app:layout_constraintBottom_toBottomOf="@id/news"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/news"
            app:layout_constraintTop_toTopOf="@id/menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlack"
        android:alpha="0.05"/>
    <TextView
        android:id="@+id/cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text="@string/stock_price"
        android:textColor="@color/colorBlack"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/menu" />

    <TextView
        android:id="@+id/difference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/stock_difference"
        android:textColor="@color/colorUp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/cost" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dynamic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/difference"
        android:layout_marginTop="10dp"
        android:visibility="invisible">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack"
            app:layout_constraintTop_toTopOf="@id/dynamic"
            android:alpha="0.2"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack"
            app:layout_constraintBottom_toBottomOf="@id/dynamic"
            android:alpha="0.2"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="29 марта 2021"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/dynamic"/>
        <TextView
            android:id="@+id/line_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/date"
            android:text="$120.01"
            android:textSize="16sp"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/cost"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.db.williamchart.view.LineChartView
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="35dp"
        app:chart_axis="none"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginVertical="10dp"
        app:chart_gridEffect="dashed"
        app:chart_labelsColor="#FF70977F"
        app:chart_labelsSize="0sp"
        app:chart_lineColor="#1A1A1A"
        app:chart_lineThickness="3dp"
        app:chart_smoothLine="true"
        app:layout_constraintBottom_toTopOf="@+id/intervals"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dynamic" >
    </com.db.williamchart.view.LineChartView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/intervals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toTopOf="@id/buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="16dp"
            android:paddingTop="14dp"
            android:paddingRight="16dp"
            android:paddingBottom="14dp"
            style="@style/intervalActive"
            android:background="@drawable/btn_interval_active"
            android:text="@string/inverval_day"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/week"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/intervals" />

        <TextView
            android:id="@+id/week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="16dp"
            android:paddingTop="14dp"
            android:paddingRight="16dp"
            android:paddingBottom="14dp"
            android:text="@string/interval_w"
            style="@style/intervalNotActive"
            android:background="@drawable/btn_interval"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/month"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/day"
            app:layout_constraintTop_toTopOf="@id/intervals" />

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="16dp"
            android:paddingTop="14dp"
            android:paddingRight="16dp"
            android:paddingBottom="14dp"
            android:text="@string/interval_month"
            style="@style/intervalNotActive"
            android:background="@drawable/btn_interval"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/sixmonth"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/week"
            app:layout_constraintTop_toTopOf="@id/intervals" />

        <TextView
            android:id="@+id/sixmonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="16dp"
            android:paddingTop="14dp"
            android:paddingRight="16dp"
            android:paddingBottom="14dp"
            android:text="@string/interval_6m"
            style="@style/intervalNotActive"
            android:background="@drawable/btn_interval"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/year"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/month"
            app:layout_constraintTop_toTopOf="@id/intervals" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="16dp"
            android:paddingTop="14dp"
            android:paddingRight="16dp"
            android:paddingBottom="14dp"
            android:text="@string/interval_year"
            style="@style/intervalNotActive"
            android:background="@drawable/btn_interval"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/all"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sixmonth"
            app:layout_constraintTop_toTopOf="@id/intervals" />

        <TextView
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:paddingLeft="16dp"
            android:paddingTop="14dp"
            android:paddingRight="16dp"
            android:paddingBottom="14dp"
            android:text="@string/interval_all"
            android:layout_marginStart="16dp"
            style="@style/intervalNotActive"
            android:background="@drawable/btn_interval"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/year"
            app:layout_constraintTop_toTopOf="@id/intervals" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_buy"
        android:fontFamily="@font/montserrat"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/buy_btn"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>