<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="@drawable/stock_outline"
    android:id="@+id/layout"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_margin="8dp"
        android:background="@drawable/round_image"
        android:src="@drawable/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/logo"
        android:text="@string/placeholder_name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_path"
        app:layout_constraintLeft_toRightOf="@id/name"
        app:layout_constraintBottom_toBottomOf="@id/name"
        app:layout_constraintTop_toTopOf="@id/name"
        android:layout_marginStart="6dp" />
    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/placeholder_surname"
        android:fontFamily="@font/montserrat"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginStart="12dp"/>

    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="17dp"
        android:text="@string/placeholder_cost"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/growth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="14dp"
        android:text="@string/placeholder_percent"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/colorUp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>