<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StockView">
    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="33dp"
        android:layout_marginStart="18dp"
        tools:ignore="ContentDescription" />
    <ImageView
        android:id="@+id/favourite_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favourite"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="18dp"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/name_placeholder"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/company_placeholder"
        android:layout_marginTop="4dp"
        android:textSize="12sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@+id/name"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@id/company"
        android:paddingBottom="14dp">

        <TextView
            android:id="@+id/chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            style="@style/StockButtonActive"
            android:text="@string/chart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/menu"
            app:layout_constraintBottom_toBottomOf="@id/summary"/>

        <TextView
            android:id="@+id/summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/chart"
            android:text="@string/summary"
            style="@style/StockButtonNotActive"
            android:layout_marginStart="20dp"
            app:layout_constraintLeft_toRightOf="@id/chart"
            app:layout_constraintTop_toTopOf="@id/menu"
            app:layout_constraintBottom_toBottomOf="@id/chart"/>
        <TextView
            android:id="@+id/news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/chart"
            android:text="@string/news"
            style="@style/StockButtonNotActive"
            android:layout_marginStart="20dp"
            app:layout_constraintLeft_toRightOf="@id/summary"
            app:layout_constraintTop_toTopOf="@id/menu"
            app:layout_constraintBottom_toBottomOf="@id/summary"/>
        <TextView
            android:id="@+id/forecasts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/chart"
            android:text="@string/forecasts"
            style="@style/StockButtonNotActive"
            android:layout_marginStart="20dp"
            app:layout_constraintLeft_toRightOf="@id/news"
            app:layout_constraintTop_toTopOf="@id/menu"
            app:layout_constraintBottom_toBottomOf="@id/news"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="$131.93"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/colorBlack"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/menu"/>
    <TextView
        android:id="@+id/difference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="+$0.12 (1,15%)"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/colorUp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/cost"/>
    <com.db.williamchart.view.LineChartView
        android:id="@+id/lineChart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/difference"
        app:layout_constraintBottom_toTopOf="@+id/intervals"
        android:layout_width="match_parent"
        android:layout_marginBottom="40dp"
        app:chart_axis="none"
        app:chart_gridEffect="dotted"
        app:chart_labelsColor="#FF70977F"
        app:chart_labelsSize="10sp"
        app:chart_lineColor="#1A1A1A"
        app:chart_lineThickness="2dp"
        app:chart_smoothLine="true"
        app:chart_pointDrawable="drawable"
        android:layout_height="0dp" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/intervals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toTopOf="@id/buy">
        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_interval"
            android:text="D"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="18dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            app:layout_constraintTop_toTopOf="@id/intervals"
            android:textColor="@color/colorBlack"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>
        <TextView
            android:id="@+id/week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_interval"
            android:text="W"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/day"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/montserrat"
            app:layout_constraintTop_toTopOf="@id/intervals"
            android:textColor="@color/colorBlack"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>
        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_interval"
            android:text="M"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/week"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/montserrat"
            app:layout_constraintTop_toTopOf="@id/intervals"
            android:textColor="@color/colorBlack"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>
        <TextView
            android:id="@+id/sixmonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_interval"
            android:text="6M"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/month"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/montserrat"
            app:layout_constraintTop_toTopOf="@id/intervals"
            android:textColor="@color/colorBlack"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>
        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_interval"
            android:text="1Y"
            android:textStyle="bold"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/sixmonth"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/montserrat"
            app:layout_constraintTop_toTopOf="@id/intervals"
            android:textColor="@color/colorBlack"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>
        <TextView
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_interval_active"
            android:text="All"
            android:textStyle="bold"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/year"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/montserrat"
            app:layout_constraintTop_toTopOf="@id/intervals"
            android:textColor="@android:color/white"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Buy for $132.04"
        android:background="@drawable/btn_buy"
        android:textColor="@android:color/white"
        android:fontFamily="@font/montserrat"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>